--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
       </div>
       </div>
 
+<footer> <p>
+  Cristobal Andrade
+</p></footer>
+
 <script src="./assets/js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/53bed8dc4a.js" crossorigin="anonymous"></script>
